testsuite/tests/saks/should_fail/T18863a.stderr

T18863a.hs:9:1: error:
    • Couldn't match expected kind: forall i. i -> *
                  with actual kind: forall i -> i -> *
    • In the data type declaration for ‘IDa’
